--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 				<article class="container" id="top">
 					<div class="row">
 						<div class="4u 12u(mobile)">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/fb_profile.jpg" alt="" /></span>
 						</div>
 						<div class="8u 12u(mobile)">
 							<header>
-								<h1><strong>Valerie Ding</strong>.</h1>
+								<h1><strong>Valerie Ding</strong></h1>
 							</header>
-							<p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://n33.co">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
+							<p>Stanford University '19</p>
 							<a href="#work" class="button big scrolly">Learn about what I do</a>
 						</div>
 					</div>
