--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-﻿
+<!DOCTYPE html>
+<html>
+<head>
+<title>Where's the food?</title>
+</head>
+<body>
+
+<h1>The standard stuff</h1>
+<table style="width:100%">
+  <tr>
+    <th>Day / Dining Hall</th>
+    <th>Arrillaga</th> 
+    <th>Branner</th>
+    <th>FloMo</th>
+    <th>Lag</th>
+    <th>Manz</th>
+    <th>Ricker</th>
+    <th>Stern</th>
+    <th>Wilbur</th>
+    <th>Yost/Mur/EAST</th>
+  </tr>
+  <tr>
+    <td>Mon-Thurs</td>
+    <td>7:30-10:30; 11-4:30; 5-9</td> 
+    <td>11:30-1:15; 5-7</td>
+    <td>8-9:30; 11:30-1:15; 5-7:30</td> 
+    <td>7:30-9:30; 11:30-1:15; 5-8</td>
+    <td>11:30-1:15; 5-7</td> 
+    <td>7:30-9:30; 11:30-1:15; 5-7</td>
+    <td>7:30-9:30; 11:30-1:15; 5-7</td> 
+    <td>7:30-9:30; 11:30-1:15; 5-7</td>
+    <td>12:15-1:15; 5:30-6:30</td>
+  </tr>
+</table>
+</body>
+</html>
