--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Where's the food?</title>
+<title>Hungry?</title>
 </head>
 <body>
 
 <h1>The standard stuff</h1>
-<table style="width:100%">
+<table border="1" style="width:75%">
   <tr>
     <th>Day / Dining Hall</th>
     <th>Arrillaga</th> 
