--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>The standard stuff</h1>
-<table border="1" style="width:75%">
+<table border="1" style="width:100%">
   <tr>
     <th>Day / Dining Hall</th>
     <th>Arrillaga</th> 
@@ -14,23 +14,59 @@
     <th>FloMo</th>
     <th>Lag</th>
     <th>Manz</th>
-    <th>Ricker</th>
+    <th>Rick</th>
     <th>Stern</th>
-    <th>Wilbur</th>
-    <th>Yost/Mur/EAST</th>
+    <th>Wilbz</th>
+    <th>Yost&Co</th>
   </tr>
   <tr>
     <td>Mon-Thurs</td>
-    <td>7:30a-10:30a<br>11a-4:30p<br>5p-9p</td> 
-    <td>11:30a-1:15p<br>5p-7p</td>
-    <td>8a-9:30a<br>11:30a-1:15p<br>5p-7:30p</td> 
-    <td>7:30a-9:30a<br>11:30a-1:15p<br>5p-8p</td>
-    <td>11:30a-1:15p<br>5p-7p</td> 
-    <td>7:30-9:30; 11:30-1:15; 5-7</td>
-    <td>7:30-9:30; 11:30-1:15; 5-7</td> 
-    <td>7:30-9:30; 11:30-1:15; 5-7</td>
-    <td>12:15-1:15; 5:30-6:30</td>
+    <td>7:30-10:30a<br>11a-4:30p<br>5-9p</td> 
+    <td><br>11:30a-1:15p<br>5-7p</td>
+    <td>8-9:30a<br>11:30a-1:15p<br>5-7:30p</td> 
+    <td>7:30-9:30a<br>11:30a-1:15p<br>5-8p</td>
+    <td><br>11:30a-1:15p<br>5-7p</td> 
+    <td>7:30-9:30a<br>11:30a-1:15p<br>5-7p</td>
+    <td>7:30-9:30a<br>11:30a-1:15p<br>5-7p</td> 
+    <td>7:30-9:30a<br>11:30a-1:15p<br>5-7p</td>
+    <td><br>12:15-1:15p<br>5:30-6:30p</td>
   </tr>
+  <tr>
+    <td>Friday</td>
+    <td>7:30-10:30a<br>11a-4:30p<br>5-9p</td> 
+    <td><br>11:30a-1:15p<br>5-7p</td>
+    <td>CLOSED</td> 
+    <td>7:30-9:30a<br>11:30a-1:15p<br>5-8p</td>
+    <td><br>11:30a-1:15p<br>5-7p</td> 
+    <td>CLOSED</td>
+    <td>7:30-9:30a<br>11:30a-1:15p<br>5-7p</td> 
+    <td>7:30-9:30a<br>11:30a-1:15p<br>5-7p</td>
+    <td>CLOSED</td>
+  </tr>
+  <tr>
+    <td>Saturday</td>
+    <td>9:30a-2p<br>5-9p</td> 
+    <td>CLOSED</td>
+    <td>CLOSED</td> 
+    <td>10a-1p<br>5-7p</td>
+    <td>CLOSED</td> 
+    <td>CLOSED</td>
+    <td>10:30a-1p<br>5-7p</td> 
+    <td>10:30a-1p<br>5-7p</td>
+    <td>CLOSED</td>
+</tr>
+  <tr>
+    <td>Sunday</td>
+    <td>9:30a-2p<br>5-9p</td> 
+    <td>CLOSED</td>
+    <td>10:30a-1p<br>5-7:30p</td> 
+    <td>10a-1p<br>5-7p</td>
+    <td>CLOSED</td> 
+    <td>10:30a-1p<br>5-7p</td>
+    <td>10:30a-1p<br>5-7p</td> 
+    <td>10:30a-1p<br>5-7p</td>
+    <td>10:30a-12:15p<br>5:30-6:30p</td>
+</tr>
 </table>
 </body>
 </html>
