--- a/index.html
+++ b/index.html
@@ -68,5 +68,49 @@
     <td>10:30a-12:15p<br>5:30-6:30p</td>
 </tr>
 </table>
+
+<h1>Dem Meal Plan Dollars</h1>
+<table border="1" style="width:100%">
+  <tr>
+    <th>Day / Place</th>
+    <th>Forbes</th> 
+    <th>TAP</th>
+    <th>Alumni Cafe</th>
+    <th>Heirlooms&Co</th>
+    <th>Subway</th>
+    <th>Olives</th>
+    <th>Mungle</th>
+  </tr>
+  <tr>
+    <td>Mon-Fri</td>
+    <td>9a-6p</td>
+    <td>11a-2a</td>
+    <td>7:30a-7p</td>
+    <td>11a-2p</td>
+    <td>9a-7p</td>
+    <td>7:30a-4p</td>
+    <td>8a-8p</td>
+  </tr>
+  <tr>
+    <td>Saturday</td>
+    <td>CLOSED</td>
+    <td>11a-2a</td>
+    <td>CLOSED</td>
+    <td>11a-4p</td>
+    <td>CLOSED</td>
+    <td>11a-5p</td>
+  </tr>
+  <tr>
+    <td>Sunday</td>
+    <td>CLOSED</td>
+    <td>5:30p-1a</td>
+    <td>CLOSED</td>
+    <td>11a-4p</td>
+    <td>CLOSED</td>
+    <td>11a-5p</td>
+  </tr>
+</table>
+
+
 </body>
 </html>
