--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     <td>CLOSED</td>
     <td>11a-2a</td>
     <td>CLOSED</td>
+    <td>CLOSED</td>
     <td>11a-4p</td>
     <td>CLOSED</td>
     <td>11a-5p</td>
@@ -104,6 +105,7 @@
     <td>Sunday</td>
     <td>CLOSED</td>
     <td>5:30p-1a</td>
+    <td>CLOSED</td>
     <td>CLOSED</td>
     <td>11a-4p</td>
     <td>CLOSED</td>
