--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>The standard stuff</h1>
+<h1>I Haz Swipes</h1>
 <table border="1" style="width:100%">
   <tr>
     <th>Day / Dining Hall</th>
@@ -69,7 +69,7 @@
 </tr>
 </table>
 
-<h1>Dem Meal Plan Dollars</h1>
+<h1>I Haz Meal Plan $$$</h1>
 <table border="1" style="width:100%">
   <tr>
     <th>Day / Place</th>
