--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <th>Rick</th>
     <th>Stern</th>
     <th>Wilbz</th>
-    <th>Yost&Co</th>
+    <th>Yost + Co</th>
   </tr>
   <tr>
     <td>Mon-Thurs</td>
@@ -76,7 +76,7 @@
     <th>Forbes</th> 
     <th>TAP</th>
     <th>Alumni Cafe</th>
-    <th>Heirlooms&Co</th>
+    <th>Heirlooms + Co</th>
     <th>Subway</th>
     <th>Olives</th>
     <th>Mungle</th>
