--- a/hangry.html
+++ b/hangry.html
@@ -9,7 +9,7 @@
 <table border="1" style="width:100%">
   <tr>
     <th>Day / Dining Hall</th>
-    <th>Arrillaga</th> 
+    <th>(F)Arrillaga ;-)</th> 
     <th>Branner</th>
     <th>FloMo</th>
     <th>Lag</th>
