--- a/hangry.html
+++ b/hangry.html
@@ -4,6 +4,8 @@
 <title>HANGRY</title>
 </head>
 <body>
+  
+  <h1>On this day of the week:</h1>
 
 <script language="JavaScript">
   var date = new Date();
