--- a/hangry.html
+++ b/hangry.html
@@ -19,6 +19,8 @@
       document.write("Go to Ricker.");
     } else if (date.getHours() >= 17 && date.getHours() <= 19) {
       document.write("Go to Ricker.");
+    } else if (date.getHours() >= 22) {
+      document.write("Go to Latenite!");
     } else {
       document.write("Not very exciting right now. Check the table below.");
     }
@@ -43,12 +45,16 @@
       document.write("Ricker's open now! Or, ya know, Stern.");
     } else if (date.getHours() >= 19 && date.getHours() <= 21) {
       document.write("Arrillaga closes at 9PM every day. Run!");
+    } else if (date.getHours() >= 22) {
+      document.write("Go to Latenite!");
     } else {
       document.write("Not very exciting right now. Check the table below.");
     }
   } else {
     //Friday
-      if (date.getHours() <= 7) {
+    if (date.getHours() <= 2) {
+      document.write("Go to Latenite!");
+    } else if (date.getHours() <= 7) {
       document.write("Ricker is closed today! Other dining halls open at 7:30AM.");
     } else if (date.getHours() >= 12 && date.getHours() <= 13) {
       document.write("Ricker is closed today! Go to Wilbz!");
