--- a/hangry.html
+++ b/hangry.html
@@ -22,7 +22,7 @@
     } else if (date.getHours() >= 22) {
       document.write("Go to Latenite!");
     } else {
-      document.write("Not very exciting right now. Check the table below.");
+      document.write("Not much open right now. Check the table below.");
     }
   } else if (date.getDay() == 6) {
     //Saturday
