--- a/hangry.html
+++ b/hangry.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   
-  <h1>I'm hungry RIGHT NOW:</h1>
+  <h1>HANGRY RIGHT NOW</h1>
   
   Recommendation algorithm tailored to West Campus residents: <br>
 
