--- a/hangry.html
+++ b/hangry.html
@@ -29,8 +29,8 @@
 </script>
 <div id="clockbox"></div>
   
-  
-  Recommendation algorithm tailored to West Campus residents: <br>
+  <br>
+  Recommendation algorithm tailored to West Campus residents: <br><br>
 
 <script language="JavaScript">
   var date = new Date();
