--- a/hangry.html
+++ b/hangry.html
@@ -30,7 +30,7 @@
 <div id="clockbox"></div>
   
   <br>
-  Recommendation algorithm tailored to West Campus residents: <br><br>
+  <b>Recommendation algorithm tailored to West Campus residents: </b>
 
 <script language="JavaScript">
   var date = new Date();
