--- a/hangry.html
+++ b/hangry.html
@@ -120,33 +120,33 @@
     <td>Friday</td>
     <td>7:30-10:30a<br>11a-4:30p<br>5-9p</td> 
     <td><br>11:30a-1:15p<br>5-7p</td>
-    <td><font color="red">CLOSED</font></td> 
+    <td>CLOSED</td> 
     <td>7:30-9:30a<br>11:30a-1:15p<br>5-8p</td>
     <td><br>11:30a-1:15p<br>5-7p</td> 
-    <td><font color="red">CLOSED</font></td>
+    <td>CLOSED</td>
     <td>7:30-9:30a<br>11:30a-1:15p<br>5-7p</td> 
     <td>7:30-9:30a<br>11:30a-1:15p<br>5-7p</td>
-    <td><font color="red">CLOSED</font></td>
+    <td>CLOSED</td>
   </tr>
   <tr>
     <td>Saturday</td>
     <td>9:30a-2p<br>5-9p</td> 
-    <td><font color="red">CLOSED</font></td>
-    <td><font color="red">CLOSED</font></td> 
+    <td>CLOSED</td>
+    <td>CLOSED</td> 
     <td>10a-1p<br>5-7p</td>
-    <td><font color="red">CLOSED</font></td> 
-    <td><font color="red">CLOSED</font></td>
+    <td>CLOSED</td> 
+    <td>CLOSED</td>
     <td>10:30a-1p<br>5-7p</td> 
     <td>10:30a-1p<br>5-7p</td>
-    <td><font color="red">CLOSED</font></td>
+    <td>CLOSED</td>
 </tr>
   <tr>
     <td>Sunday</td>
     <td>9:30a-2p<br>5-9p</td> 
-    <td><font color="red">CLOSED</font></td>
+    <td>CLOSED</td>
     <td>10:30a-1p<br>5-7:30p</td> 
     <td>10a-1p<br>5-7p</td>
-    <td><font color="red">CLOSED</font></td> 
+    <td>CLOSED</td> 
     <td>10:30a-1p<br>5-7p</td>
     <td>10:30a-1p<br>5-7p</td> 
     <td>10:30a-1p<br>5-7p</td>
@@ -187,27 +187,27 @@
     <td>9a-7p</td>
     <td>7:30a-4p</td>
     <td>8a-8p</td>
-    <td><font color="red">CLOSED</font></td>
+    <td>CLOSED</td>
   </tr>
   <tr>
     <td>Saturday</td>
-    <td><font color="red">CLOSED</font></td>
+    <td>CLOSED</td>
     <td>11a-2a</td>
-    <td><font color="red">CLOSED</font></td>
-    <td><font color="red">CLOSED</font></td>
+    <td>CLOSED</td>
+    <td>CLOSED</td>
     <td>11a-4p</td>
-    <td><font color="red">CLOSED</font></td>
+    <td>CLOSED</td>
     <td>11a-5p</td>
-    <td><font color="red">CLOSED</font></td>
+    <td>CLOSED</td>
   </tr>
   <tr>
     <td>Sunday</td>
-    <td><font color="red">CLOSED</font></td>
+    <td>CLOSED</td>
     <td>5:30p-1a</td>
-    <td><font color="red">CLOSED</font></td>
-    <td><font color="red">CLOSED</font></td>
+    <td>CLOSED</td>
+    <td>CLOSED</td>
     <td>11a-4p</td>
-    <td><font color="red">CLOSED</font></td>
+    <td>CLOSED</td>
     <td>11a-5p</td>
     <td>9:30p-2:30a</td>
   </tr>
