--- a/hangry.html
+++ b/hangry.html
@@ -30,7 +30,7 @@
 <div id="clockbox"></div>
   
   <br>
-  <b>Recommendation algorithm tailored to West Campus residents: </b>
+  <b>My algorithm recommends this for West Campus residents: </b>
 
 <script language="JavaScript">
   var date = new Date();
@@ -45,7 +45,7 @@
     } else if (date.getHours() >= 22) {
       document.write("Go to Latenite!");
     } else {
-      document.write("Not much open right now. Check the table below.");
+      document.write("I can't recommend anything exciting and open at the moment. Check the table below.");
     }
   } else if (date.getDay() == 6) {
     //Saturday
@@ -75,7 +75,7 @@
     } else if (date.getHours() >= 22) {
       document.write("Go to Latenite!");
     } else {
-      document.write("Not much open right now. Check the table below.");
+      document.write("I can't recommend anything exciting and open at the moment. Check the table below.");
     }
   } else {
     //Friday
