--- a/hangry.html
+++ b/hangry.html
@@ -62,12 +62,12 @@
     //Mon-Thurs
     if (date.getHours() <= 2) {
       document.write("Go to Latenite!");
-    } else if (date.getHours() >= 8 && date.getHours() <= 9) {
-      document.write("Ricker's open now!");
+    } else if (date.getHours() >= 7 && date.getHours() <= 9) {
+      document.write("Ricker 7:30-9:30a breakfast.");
     } else if (date.getHours() >= 3 && date.getHours() <= 7) {
       document.write("All major dining halls open at 7:30AM today.");
-    } else if (date.getHours() >= 12 && date.getHours() < 13) {
-      document.write("Ricker's open now! Or, ya know, Stern.");
+    } else if (date.getHours() >= 11 && date.getHours() <= 13) {
+      document.write("Ricker 11:30a-1:15p lunch.");
     } else if (date.getHours() >= 17 && date.getHours() < 19) {
       document.write("Ricker's open now! Or, ya know, Stern.");
     } else if (date.getHours() >= 19 && date.getHours() < 21) {
@@ -81,10 +81,10 @@
     //Friday
     if (date.getHours() <= 2) {
       document.write("Go to Latenite!");
-    } else if (date.getHours() <= 7) {
+    } else if (date.getHours() <= 9) {
       document.write("Ricker is closed today! Other dining halls open at 7:30AM.");
-    } else if (date.getHours() >= 12 && date.getHours() < 13) {
-      document.write("Ricker is closed today! Go to Wilbz!");
+    } else if (date.getHours() >= 11 && date.getHours() <= 1) {
+      document.write("Ricker is closed today! Wilbz lunch 11:30a-1:15p.");
     } else if (date.getHours() >= 17 && date.getHours() < 19) {
       document.write("Ricker is closed today! Go to Stern!");
     } else {
