--- a/hangry.html
+++ b/hangry.html
@@ -30,7 +30,7 @@
 <div id="clockbox"></div>
   
   <br>
-  <b>My algorithm recommends this for West Campus residents: </b>
+  <b>West Campus Assistant (algorithm based on current local time, PST): </b>
 
 <script language="JavaScript">
   var date = new Date();
