--- a/olives.html
+++ b/olives.html
@@ -1,4 +1,3 @@
-<b>Olives @ Bldg 160:</b>
-Narratives, reviews, stories.
-
-One time in fall quarter I ordered a falafel plate. I think it was $7.50. Three falafels, pita bread, hummus, and a LOT of salad.
+<b>An Insider's Guide to Olives @ Bldg 160</b>
+<br><br>
+<i>Falafel Plate ($7.50)</i>
