--- a/olives.html
+++ b/olives.html
@@ -1,3 +1,6 @@
-<b>An Insider's Guide to Olives @ Bldg 160</b>
-<br><br>
-<i>Falafel Plate ($7.50)</i>
+<b>An Insider's Guide to Olives @ Bldg 160</b><br>
+<br>
+<i>Falafel Plate ($7.50)</i><br>
+-Falafel
+-Hummus and pita
+-Salad
