--- a/olives.html
+++ b/olives.html
@@ -1,5 +1,5 @@
 <b>An Insider's Guide to Olives @ Bldg 160</b><br>
 <br>
 <i>Falafel Plate ($7.50)</i><br>
-Falafel, hummus and pita, and salad
+Three falafels, hummus, pita, and salad
 
