--- a/olives.html
+++ b/olives.html
@@ -1,5 +1,7 @@
 <b>An Insider's Guide to Olives @ Bldg 160</b><br>
 <br>
 <i>Falafel Plate ($7.50)</i><br>
-Three falafels, pita bread, hummus, and salad<br>
-A solid lunch option, but nothing special.
+Three falafels, pita bread, hummus, and salad;<br>
+A solid lunch option, but nothing special.<br>
+<br>
+<i>Beef & Lamb Gyros</i><br>
