--- a/olives.html
+++ b/olives.html
@@ -4,4 +4,4 @@
 Three falafels, pita bread, hummus, and salad;<br>
 A solid lunch option, but nothing special.<br>
 <br>
-<i>Beef & Lamb Gyros</i><br>
+<i>Beef / Lamb Gyros</i><br>
