--- a/hangry.html
+++ b/hangry.html
@@ -169,6 +169,7 @@
     <th>Subway</th>
     <th>Olives</th>
     <th>Latenite@Lag</th>
+    <th>Arrillaga Nights</th>
   </tr>
   <tr>
     <td>Mon-Thurs</td>
@@ -178,6 +179,7 @@
     <td>11a-2p</td>
     <td>9a-7p</td>
     <td>7:30a-4p</td>
+    <td>9:30p-2:30a</td>
     <td>9:30p-2:30a</td>
   </tr>
   <tr>
@@ -189,6 +191,7 @@
     <td>9a-7p</td>
     <td>7:30a-4p</td>
     <td>CLOSED</td>
+    <td>9:30p-2:30a</td>
   </tr>
   <tr>
     <td>Saturday</td>
@@ -199,6 +202,7 @@
     <td>11a-4p</td>
     <td>CLOSED</td>
     <td>CLOSED</td>
+    <td>9:30p-2:30a</td>
   </tr>
   <tr>
     <td>Sunday</td>
@@ -208,6 +212,7 @@
     <td>CLOSED</td>
     <td>11a-4p</td>
     <td>CLOSED</td>
+    <td>9:30p-2:30a</td>
     <td>9:30p-2:30a</td>
   </tr>
 </table>
