--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Valerie Ding's project pages hosted by GitHub.
+<html>
+  <body>
+    Valerie Ding's project pages hosted by GitHub.
+  </body>
+  
+  
+</html>
