--- a/remote.html
+++ b/remote.html
@@ -1,3 +1,6 @@
-Download the Remote Android app <a href="Remote.apk" target="_blank">here</a>.
-<br>
-Remote was inspired by the work of author Muse Lee and developed by Valerie Ding.
+<html>
+  <body>
+    Download the Remote Android app <a href="Remote.apk" target="_blank">here</a>.<br>Remote was inspired by the work of author Muse Lee and developed by Valerie Ding.
+  </body>
+  
+</html>
