--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
   <body>
     Valerie Ding's project pages hosted by GitHub.
+    <br>
+    <br><a href="remote/index.html" target="_blank">Remote</a>, a freely downloadable Android app.
+    <br>I wrote the full-stack implementation (Java/XML) in an hour.
+    <br>
+    <br><a href="funnel/index.html" target="_blank">Funnel</a>, a content-sharing platform for soundbites.
+    <br>Ongoing.
   </body>
   
   
