--- a/remote/index.html
+++ b/remote/index.html
@@ -1,6 +1,9 @@
 <html>
   <body>
-    Download the Remote Android app <a href="Remote.apk" target="_blank">here</a>.<br>Remote was inspired by the work of author Muse Lee and developed by Valerie Ding.
+    Download the Remote Android app <a href="Remote.apk" target="_blank">here</a>.
+    <br>Remote was inspired by the work of author Muse Lee and developed by Valerie Ding.
+    <br>To download to your Android device, you will need to temporarily authorize unknown sources (me!).
+    <br>Settings > Security > Unknown Sources should be toggled.
   </body>
   
 </html>
