--- a/funnel/index.html
+++ b/funnel/index.html
@@ -1,3 +1,8 @@
 <html>
 <h1>Funnel</h1>
+<body>
+	User Pages:
+	<br><a href="carlos.html">Carlos</a>
+	<br><a href="valerie.html">Valerie</a>
+</body>
 </html>
