--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
   <body>
     Valerie Ding's project pages hosted by GitHub.
     <br>
-    <br><a href="remote/index.html" target="_blank">Remote</a>, a freely downloadable Android app.
-    <br>I wrote the full-stack implementation (Java/XML) in an hour.
+    <br><a href="remote/index.html">Remote</a>, a freely downloadable Android app.
+    <br>Allows the user to choose from a range of emotions defined by Electronic Arts
+    <br>and play mood music. I wrote the full-stack implementation (Java/XML) in an hour.
     <br>
-    <br><a href="funnel/index.html" target="_blank">Funnel</a>, a content-sharing platform for soundbites.
+    <br><a href="funnel/index.html">Funnel</a>, a content-sharing platform for soundbites.
     <br>Ongoing.
   </body>
   
