--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <br>and play mood music. I wrote the full-stack implementation (Java/XML) in an hour.
     <br>
     <br><a href="funnel/index.html">Funnel</a>, a content-sharing platform for soundbites.
-    <br>Ongoing.
+    <br>I am currently developing this full-stack.
   </body>
   
   
