--- a/funnel/index.html
+++ b/funnel/index.html
@@ -4,5 +4,6 @@
 	User Pages:
 	<br><a href="carlos.html">Carlos</a>
 	<br><a href="valerie.html">Valerie</a>
+	<br>Inspired by Carlos Fresnillo and developed by Valerie Ding.
 </body>
 </html>
