oops a little more

--- a/funnel/index.html
+++ b/funnel/index.html
@@ -6,7 +6,7 @@
 Soon you will be able to create an account and start curating <a href="https://en.wikipedia.org/wiki/Earworm" target="_blank">earworms</a> that you can't get out of your head and want to share with the world.
 <br>
 
-	<h3>Funneler Pages:
+	<h3>Funneler Pages:</h3>
 	<br><a href="carlos.html">Carlos</a>
 	<br><a href="valerie.html">Valerie</a>
 	<br>
