--- a/funnel/index.html
+++ b/funnel/index.html
@@ -7,7 +7,8 @@ Soon you will be able to create an account and start curating <a href="https://e
 <br>
 
 	<h3>Funneler Pages:</h3>
-	<br><a href="carlos.html">Carlos</a>
+	
+	<a href="carlos.html">Carlos</a>
 	<br><a href="valerie.html">Valerie</a>
 	<br>
 	<br>Inspired by Carlos Fresnillo and developed by Valerie Ding.
