--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     Valerie Ding's project pages hosted by GitHub.
     <br>
     <br><a href="remote/index.html">Remote</a>, a freely downloadable Android app.
-    <br>Allows the user to choose from a range of emotions defined by Electronic Arts
-    <br>and play mood music. I wrote the full-stack implementation (Java/XML) in an hour.
+    <br>Allows the user to choose from a range of emotions and play corresponding
+    <br>mood music defined by Electronic Arts. I wrote the full-stack implementation (Java/XML) in an hour.
     <br>
     <br><a href="funnel/index.html">Funnel</a>, a content-sharing platform for soundbites.
     <br>I am currently developing this full-stack.
