--- a/funnel/valerie.html
+++ b/funnel/valerie.html
@@ -4,6 +4,8 @@
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/2RwjhFAnqhI?start=108&end=154" frameborder="0" allowfullscreen></iframe>
 	<br>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/sXs6deITh1Y?start=77&end=105" frameborder="0" allowfullscreen></iframe>
+	<br>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/fe6pyCcnaIQ?start=64&end=78" frameborder="0" allowfullscreen></iframe>
 </body>
 
 </html>
