--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    Valerie Ding's project pages hosted by GitHub.
+    Valerie Ding's project pages hosted on GitHub.
     <br>
     <br><a href="remote/index.html">Remote</a>, a freely downloadable Android app.
     <br>Allows the user to choose from a range of emotions and play corresponding mood music defined by Electronic Arts. I wrote the full-stack implementation (Java/XML) in an hour.
