--- a/remote/index.html
+++ b/remote/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    Download the Remote Android app <a href="Remote.apk" target="_blank">here</a>.
+    Download the latest release of the Remote Android app <a href="https://github.com/dingv/dingv.github.io/releases/latest" target="_blank">here</a>.
     <br>Remote was inspired by the work of author Muse Lee and developed by Valerie Ding.
     <br>To download to your Android device, you will need to temporarily authorize unknown sources (me!).
     <br>Settings > Security > Unknown Sources should be toggled.
