--- a/funnelworm/index.html
+++ b/funnelworm/index.html
@@ -1,12 +1,12 @@
 <html>
-<h1>Funnel</h1>
+<h1>Funnelworm</h1>
 <h2>Your music, exactly how you want to hear it.</h2>
 <body>
 
 Soon you will be able to create an account and start curating <a href="https://en.wikipedia.org/wiki/Earworm" target="_blank">earworms</a> that you can't get out of your head and want to share with the world.
 <br>
 
-	<h3>Funneler Pages:</h3>
+	<h3>Funnelworm:</h3>
 	
 	<a href="carlos.html">Carlos</a>
 	<br><a href="valerie.html">Valerie</a>
