--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <br>Allows the user to choose from a range of emotions and play corresponding
     <br>mood music defined by Electronic Arts. I wrote the full-stack implementation (Java/XML) in an hour.
     <br>
-    <br><a href="funnel/index.html">Funnel</a>, a content-sharing platform for soundbites.
+    <br><a href="funnelworm/index.html">Funnelworm</a>, a content-sharing platform for soundbites.
     <br>I am currently developing this full-stack.
   </body>
   
