--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <br><a href="remote/index.html">Remote</a>, a freely downloadable Android app.
     <br>Allows the user to choose from a range of emotions and play corresponding mood music defined by Electronic Arts. I wrote the full-stack implementation (Java/XML) in an hour.
     <br>
-    <br><a href="funnelworm/index.html">Funnel</a>, a content-sharing platform for <a href="https://en.wikipedia.org/wiki/Earworm" target="_blank">earworms</a>.
+    <br><a href="funnelworm/index.html">Funnelworm</a>, a content-sharing platform for <a href="https://en.wikipedia.org/wiki/Earworm" target="_blank">earworms</a>.
     <br>I am currently developing this full-stack.
   </body>
   
