Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,14 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Valerie Ding by dingv</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
   <body>
-    Valerie Ding's project pages hosted on GitHub.
-    <br>
-    <br><a href="remote/index.html">Remote</a>, a freely downloadable Android app.
-    <br>Allows the user to choose from a range of emotions and play corresponding mood music defined by Electronic Arts. I wrote the full-stack implementation (Java/XML) in an hour.
-    <br>
-    <br><a href="funnelworm/index.html">Funnelworm</a>, a content-sharing platform for <a href="https://en.wikipedia.org/wiki/Earworm" target="_blank">earworms</a>.
-    <br>I am currently developing this full-stack.
+    <div class="wrapper">
+      <header>
+        <h1>Valerie Ding</h1>
+        <p>dingv@stanford.edu</p>
+
+
+        <p class="view"><a href="https://github.com/dingv">View My GitHub Profile</a></p>
+
+      </header>
+      <section>
+        <h3>
+<a id="november-12-2016" class="anchor" href="#november-12-2016" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>November 12, 2016</h3>
+
+<p>Test blog post.</p>
+
+<h3>
+<a id="remote-for-android" class="anchor" href="#remote-for-android" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Remote for Android</h3>
+
+<p>I wrote the full-stack implementation for this music mobile application in one hour (Android Java/XML). This was ideated in collaboration with novelist Muse Lee in August 2016. After temporarily authorizing unknown sources on your Android device (Settings &gt; Security &gt; Unknown Sources), you can access the secure Remote release page on GitHub <a href="https://github.com/dingv/dingv.github.io/releases/tag/v1.0">here</a>.</p>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
   </body>
-  
-  
 </html>
