--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <h3>
 <a id="remote-for-android" class="anchor" href="#remote-for-android" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Remote for Android</h3>
 
-<p>I wrote the full-stack implementation for this music mobile application in one hour (Android Java/XML). This was ideated in collaboration with novelist Muse Lee in August 2016. After temporarily authorizing unknown sources on your Android device (Settings &gt; Security &gt; Unknown Sources), you can access the secure Remote release page on GitHub <a href="https://github.com/dingv/dingv.github.io/releases/tag/v1.0">here</a>.</p>
+<p>I wrote the full-stack implementation for this music mobile application in one hour (Android Java/XML). This was ideated in collaboration with novelist Muse Lee in August 2016. After temporarily authorizing unknown sources on your Android device (Settings &gt; Security &gt; Unknown Sources), you can download Remote for Android through the secure Remote release page on GitHub <a href="https://github.com/dingv/dingv.github.io/releases/tag/v1.0">here</a>.</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
