--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
       <header>
         <h1>Valerie Ding</h1>
         <p>dingv@stanford.edu</p>
-
-
-        <p class="view"><a href="https://github.com/dingv">View My GitHub Profile</a></p>
-
+        <p class="view"><a href="https://github.com/dingv">GitHub</a></p>
+        <p class="view"><a href="https://www.linkedin.com/in/dingv">LinkedIn</a></p>
       </header>
       <section>
         <h3>
