--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>Valerie Ding</title>
+	</head>
   <body>
     Valerie Ding's project pages hosted on GitHub.
     <br>
