--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
     <div class="wrapper">
       <header>
         <h1>Valerie Ding</h1>
-        <p>dingv@stanford.edu</p>
-        <p class="view"><a href="https://github.com/dingv">GitHub</a></p>
-        <p class="view"><a href="https://www.linkedin.com/in/dingv">LinkedIn</a></p>
+        <p>dingv@stanford.edu
+        <br>
+        <a href="https://github.com/dingv">GitHub</a>
+        <br>
+        <a href="https://www.linkedin.com/in/dingv">LinkedIn</a>
+        </p>
       </header>
       <section>
         <h3>
