--- a/irene-au.html
+++ b/irene-au.html
@@ -30,7 +30,25 @@
         <h3>
 <a id="irene-au" class="anchor" href="#irene-au" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Three Lessons from Irene Au</h3>
 
-<p>Khosla Ventures design partner Irene Au visited CS147 (Human-Computer Interaction) at Stanford University today.
+<p>Khosla Ventures design partner Irene Au visited CS147 (Human-Computer Interaction) at Stanford University on 11/29/16. She discussed her career trajectory in HCI and human-centered design. Here are three lessons that she highlighted in her talk.
+	<br>
+	<br>
+	<b>Form relationships with a diverse group of people.</b>
+	<br>
+	Irene joined Netscape immediately after grad school. In reflecting on her formative early-career years, she emphasized the importance of adopting a truly collaborative attitude and truly open mind when working in an interdisciplinary team. "As designers, you can turn any problem into an interesting problem." It is important to genuinely seek to understand the people on your team in order to work well together, enjoy work, and gain valuable insight into how to accomplish tasks more efficiently and effectively.
+	<br>
+	<br>
+	<b>"Be willing to see around corners for things other people can't see."</b>
+	<br>
+	When Netscape open-sourced and became Mozilla after Microsoft began to compete in the space, Irene was looking for the next phase in her career. She chose Yahoo because she felt that the team was happiest. However, this was not a highly-regarded choice, as designers at the time could not understand why Yahoo was attractive for design; it was at the time basically hypertext. Nonetheless, Irene says she saw the potential in Yahoo as they were beginning a series of new features and innovating in the interactive web space, and during her stint at Yahoo grew the design division to 200 reports.
+	<br>
+	<br>
+	<b>Adopt a beginner's mind, not an expert's mind.</b>
+	<br>
+	Irene joined Google after building and leading a large design team at Yahoo. She initially believed that she could bring in the same approach to Google as she had at Yahoo, but realized that the infrastructure and perspectives at Google necessitated a complete mental shift. She needed a "hard reset" and a return to the beginner's mindset in order to innovate effectively and build a competitive design team at Google.
+	<br>
+	<br>
+	- Valerie Ding, 11/29/16
 </p>
 
   </body>
