--- a/irene-au.html
+++ b/irene-au.html
@@ -45,7 +45,7 @@
 	<br>
 	<b>Adopt a beginner's mind, not an expert's mind.</b>
 	<br>
-	Irene joined Google after building and leading a large design team at Yahoo. She initially believed that she could bring in the same approach to Google as she had at Yahoo, but realized that the infrastructure and perspectives at Google necessitated a complete mental shift. She needed a "hard reset" and a return to the beginner's mindset in order to innovate effectively and build a competitive design team at Google.
+	I asked Irene if she ever felt that the traditional adages of persistence were sometimes ineffective, and if she had discovered more effective methods in her career to face frustration. She nodded and mentioned that she faced an infrastructural barrier when she joined Google after building and leading a large design team at Yahoo. She initially believed that she could bring in the same approach to Google as she had at Yahoo, but realized that the engineering perspectives at Google necessitated a complete mental shift; the design principles were still young and not as prevalent in Google culture. She needed a "hard reset" and a return to the beginner's mindset in order to innovate effectively and build a competitive design team at Google.
 	<br>
 	<br>
 	- Valerie Ding, 11/29/16
