--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Valerie Ding by dingv</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -27,7 +26,16 @@
         </p>
       </header>
       <section>
-        <h3>
+
+<h3>
+<a id="irene-au" class="anchor" href="#irene-au" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="newell-shah.html">Colonel Pete Newell and Dr. Raj Shah</a></h3>
+
+<p>Silver Star recipient Col. Pete Newell and Defense Innovation Unit Experimental (DIUx) managing director Dr. Raj Shah spoke at Stanford University on 12/5/16.
+	<br>
+	<a href="newell-shah.html">Read full post</a>
+</p>
+
+<h3>
 <a id="irene-au" class="anchor" href="#irene-au" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="irene-au.html">Three Lessons from Irene Au</a></h3>
 
 <p>Khosla Ventures design partner Irene Au visited CS147 (Human-Computer Interaction) at Stanford University on 11/29/16.
