--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <section>
 
 <h3>
-<a id="irene-au" class="anchor" href="#irene-au" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="newell-shah.html">Colonel Pete Newell and Dr. Raj Shah</a></h3>
+<a id="newell-shah" class="anchor" href="#newell-shah" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="newell-shah.html">Colonel Pete Newell and Dr. Raj Shah</a></h3>
 
 <p>Silver Star recipient Col. Pete Newell and Defense Innovation Unit Experimental (DIUx) managing director Dr. Raj Shah spoke at Stanford University on 12/5/16.
 	<br>
