--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
       <section>
 
 <h3>
+<a id="publications" class="anchor" href="#publications" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Selected Publications</a></h3>
+<p></p>
+
+<p>I wrote the full-stack implementation for this music mobile application in one hour (Android Java/XML). This was ideated in collaboration with novelist Muse Lee in August 2016. After temporarily authorizing unknown sources on your Android device (Settings &gt; Security &gt; Unknown Sources), you can download Remote for Android through the secure Remote release page on GitHub <a href="https://github.com/dingv/dingv.github.io/releases/tag/v1.0" target="_blank">here</a>.</p>
+
+<h3>
 <a id="remote-for-android" class="anchor" href="#remote-for-android" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/dingv/dingv.github.io/releases/tag/v1.0" target="_blank">Remote for Android</a></h3>
 
 <p>I wrote the full-stack implementation for this music mobile application in one hour (Android Java/XML). This was ideated in collaboration with novelist Muse Lee in August 2016. After temporarily authorizing unknown sources on your Android device (Settings &gt; Security &gt; Unknown Sources), you can download Remote for Android through the secure Remote release page on GitHub <a href="https://github.com/dingv/dingv.github.io/releases/tag/v1.0" target="_blank">here</a>.</p>
