--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 <a id="publications" class="anchor" href="#publications" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Selected Publications</a></h3>
 
 <ul>
-  <li>Ding, V., Hardman, M. <a href="http://portlandtribune.com/bvt/16-opinion/247958-114620-hiring-high-school-interns-could-help-small-businesses-in-oregon-" target="_blank">Hiring High School Interns Could Help Small Businesses in Oregon.</a> <i>Beaverton Valley Times</i>, January 22, 2015.</li>
+  <li>Ding, V. & Hardman, M. <a href="http://portlandtribune.com/bvt/16-opinion/247958-114620-hiring-high-school-interns-could-help-small-businesses-in-oregon-" target="_blank">Hiring High School Interns Could Help Small Businesses in Oregon.</a> <i>Beaverton Valley Times</i>, January 22, 2015.</li>
+  <li>Ding, V. Novel Monte Carlo Modeling for Automated Designs of Next-Generation Multijunction Quantum Dot Solar Panels. <i>First Step to Nobel Prize in Physics -- Proceedings of the Twenty-Second International Competition in Research Projects in Physics for High School (Lyceum) Students</i>, 2014.</li>
+  <li>Ding, V. Rapid Optimization of Quantum Dot Solar Cells Using a Novel Rating System Integrating Quantum Mechanical Modeling and Solar Absorption Algorithm. <i>Materials Research Society (MRS) Photovoltaic Materials and Manufacturing Issues</i>, 2013.</li>
 </ul>
 
 <h3>
