--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 <a id="publications" class="anchor" href="#publications" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Selected Publications</a></h3>
 
 <ul>
-  <li>Ding, V., Guan, A., Gutierrez, S., & Li, K. <a href="http://web.stanford.edu/class/cs147/projects/LearningEducation/Studbud/" target="_blank">Studbud: study better together (personalized matching engine)</a>, Stanford University, 2017.</li>
-  <li>Ding, V. & Hardman, M. <a href="http://portlandtribune.com/bvt/16-opinion/247958-114620-hiring-high-school-interns-could-help-small-businesses-in-oregon-" target="_blank">Hiring High School Interns Could Help Small Businesses in Oregon.</a> <i>Beaverton Valley Times</i>, January 22, 2015.</li>
-  <li>Ding, V. "Novel Monte Carlo Modeling for Automated Designs of Next-Generation Multijunction Quantum Dot Solar Panels." <i>Proceedings of the Twenty-Second International First Step to Nobel Prize in Physics</i>, 2014.</li>
-  <li>Ding, V. "Rapid Optimization of Quantum Dot Solar Cells Using a Novel Rating System Integrating Quantum Mechanical Modeling and Solar Absorption Algorithm." <i>Materials Research Society (MRS) Photovoltaic Materials and Manufacturing Issues</i>, 2013.</li>
+  <li>Ding, V., Guan, A., Gutierrez, S., & Li, K. <a href="http://web.stanford.edu/class/cs147/projects/LearningEducation/Studbud/" target="_blank">Studbud: study better together (personalized matching engine)</a>, Stanford University (2016).</li>
+  <li>Ding, V. & Hardman, M. <a href="http://portlandtribune.com/bvt/16-opinion/247958-114620-hiring-high-school-interns-could-help-small-businesses-in-oregon-" target="_blank">Hiring High School Interns Could Help Small Businesses in Oregon.</a> <i>Beaverton Valley Times</i> (2015).</li>
+  <li>Ding, V. "Novel Monte Carlo Modeling for Automated Designs of Next-Generation Multijunction Quantum Dot Solar Panels." <i>Proceedings of the Twenty-Second International First Step to Nobel Prize in Physics</i> (2014).</li>
+  <li>Ding, V. "Rapid Optimization of Quantum Dot Solar Cells Using a Novel Rating System Integrating Quantum Mechanical Modeling and Solar Absorption Algorithm." <i>Materials Research Society (MRS) Photovoltaic Materials and Manufacturing Issues</i> (2013).</li>
 </ul>
 
 <h3>
