--- a/funnelworm/valerie.html
+++ b/funnelworm/valerie.html
@@ -2,9 +2,7 @@
 <html>
 <h1>Valerie</h1>
 <body>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/sXs6deITh1Y?start=77&end=105" frameborder="0" allowfullscreen></iframe>
-	<br>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/fe6pyCcnaIQ?start=64&end=79" frameborder="0" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/Fj2G16Im4cw?start=83&end=116" frameborder="0" allowfullscreen></iframe>
 </body>
 
 </html>
