--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 </head>
 
 <body>
-<b>Introduction to Machine Learning</b>
+<b>A Crash Course in Fundamentals of Machine Learning</b><br>
+Valerie Ding, Stanford University<br>
 <br>
-Objective of this primer: 
+<b>In a sentence,</b> this is a high-level overview of fundamental concepts and techniques in machine learning.
+
 </body>
 
 </html>
