--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 </head>
 
 <body>
-<b>A Crash Course in Fundamentals of Machine Learning</b><br>
+<b>A Crash Course in Machine Learning Fundamentals</b><br>
 Valerie Ding, Stanford University<br>
 <br>
-<b>In a sentence,</b> this is a high-level overview of fundamental concepts and techniques in machine learning.
+<b>In a sentence,</b> this is a high-level overview of fundamental terminology, concepts, and techniques in machine learning.<br>
+I will start by describing each paradigm in layman's terms, then outline the mathematical intuition and practical applications.<br>
+<br>
+<b>What is machine learning?</b>
 
 </body>
 
