--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Think back to when you were a child, first learning the alphabet. Perhaps you ha
 <br>
 Indeed, this was a seminal result in early machine learning: literally teaching a computer how to recognize characters in images (optical character recognition), emulating the process of teaching a child how to read. Now you can take a picture of a document with your phone and convert it to an electronic typed document, because we have figured out how to get machines to recognize characters from images.
 <br>
-This is just one, early example of machine learning. The takeaway is that we are developing <b>learning models for machines</b> by which the machines can use input information to learn about data, helping us make decisions, discoveries, and processes more efficient in a wide range of fields such as information security, medicine, and automated machinery. 
+Optical character recognition is just one, early example of machine learning. The takeaway is that we are developing <b>learning models for machines</b> by which the machines can use input information to learn about data, helping us make decisions, discoveries, and processes more efficient in a wide range of fields such as information security, medicine, and automated machinery.
 
 </body>
 
