--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ I will start by describing each paradigm in layman's terms, then outline the mat
 <b>What is machine learning?</b><br>
 Think back to when you were a child, first learning the alphabet. Perhaps you had stickers, magnets, or posters in your classroom. The letters might have been in different fonts, colors, or sizes, but over time, you were <b>trained</b> to recognize the similarities and <b>classify</b> the letters as A, B, C, etc. even if, for example, a black sans serif "A" looked wholly different from a red cursive "A".<br>
 <br>
-Indeed, this was a seminal result in early machine learning: literally teaching a computer how to recognize characters in images (optical character recognition), emulating the process of teaching a child how to read. Now you can take a picture of a document with your phone and convert it to an electronic typed document, because we have figured out how to get machines to recognize characters from images.
+Indeed, this was a seminal result in early machine learning: literally teaching a computer how to recognize characters in images (optical character recognition), emulating the process of teaching a child how to read. Now you can take a picture of a document with your phone and convert it to an electronic typed document, because we have figured out how to get machines to recognize characters from images.<br>
 <br>
 Optical character recognition is just one, early example of machine learning. The takeaway is that we are developing <b>learning models for machines</b> by which the machines can use input information to learn about data, helping us make decisions, discoveries, and processes more efficient in a wide range of fields such as information security, medicine, and automated machinery.
 
