--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ In unsupervised learning, we are trying to find structure in data. Rather than m
 Some applications of clustering are object recognition and in bioinformatics such as cancer detection.<br>
 <br> 
 <b>Deep learning</b><br>
-
+Deep learning techniques are foundationally <b>neural networks</b> with multiple <b>hidden layers</b>. This means that features are processed and optimized over multiple internal layers, allowing us to parse data with greater complexity and find structure at different levels of abstraction. This is especially helpful in dealing with large-scale unlabeled datasets. A fundamental paradigm in deep learning is <b>backpropagation</b>. To understand this conceptually, first understand that <b>forward propagation</b> is the process of transforming input to final output; the input is passed through each layer of the deep neural network to land on an output; then, to minimize the error, we use backpropagation to determine each layer's contribution to the overall error. Now we have landed on an optimization problem to optimize weights to minimize loss.
 
 </body>
 
